ci/k8s/cache-warmer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-cache-warmer
spec:
  selector:
    app: islandora-cache-warmer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-cache-warmer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-cache-warmer
  template:
    metadata:
      labels:
        app: islandora-cache-warmer
    spec:
      volumes:
        - name: islandora-prod-ca
          configMap:
            name: islandora-prod-ca
            items:
              - key: islandora-prod.pem
                path: ca.pem
      containers:
        - name: scyllaridae-cache-warmer
          image: lehighlts/scyllaridae-cache-warmer:main@sha256:06cd0de9d5e54f2cead94613bad58d3202439a947e6026534d38326c8869dbf3
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
          ports:
            - containerPort: 8080
              hostPort: 8080
          volumeMounts:
            - name: islandora-prod-ca
              mountPath: /app/ca.pem
              subPath: ca.pem
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
