ci/k8s/cleanpdf.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-cleanpdf
spec:
  selector:
    app: islandora-cleanpdf
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-cleanpdf
spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-cleanpdf
  template:
    metadata:
      labels:
        app: islandora-cleanpdf
    spec:
      containers:
        - name: scyllaridae-cleanpdf
          image: ghcr.io/lehigh-university-libraries/scyllaridae-cleanpdf:main@sha256:e5560506236d8abb541ca518f939ea79ed6ff85a2bf22caec94471a32aee4a10
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "1Gi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
