ci/k8s/coverpage.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-coverpage
spec:
  selector:
    app: islandora-coverpage
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-coverpage
spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-coverpage
  template:
    metadata:
      labels:
        app: islandora-coverpage
    spec:
      volumes:
        - name: islandora-prod-ca
          configMap:
            name: islandora-prod-ca
            items:
              - key: islandora-prod.pem
                path: ca.pem
      containers:
        - name: scyllaridae-coverpage
          image: ghcr.io/lehigh-university-libraries/scyllaridae-coverpage:main@sha256:c9976c609c4ab8d4cc3be4c45dd2a9bbf43c85a96d4676d83f6f4db6fac1fe94
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "1Gi"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: islandora-prod-ca
              mountPath: /app/ca.pem
              subPath: ca.pem
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
