ci/k8s/crayfits.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-crayfits
spec:
  selector:
    app: islandora-crayfits
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-crayfits
spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-crayfits
  template:
    metadata:
      labels:
        app: islandora-crayfits
    spec:
      containers:
        - name: scyllaridae-crayfits
          image: islandora/crayfits:7.0.18@sha256:1afe5943e3c4372d0988d739fd6b10a5c7ce3cd274823ad61eee25ee533dd2af
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "12Gi"
              cpu: "100m"
            limits:
              memory: "12Gi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
