ci/k8s/fits.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fits
spec:
  selector:
    app: fits
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fits
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fits
  template:
    metadata:
      labels:
        app: fits
    spec:
      containers:
        - name: fits
          image: islandora/fits:7.0.18@sha256:ef83acde00192d75be0b06e2537e871eaf10ce3a9853bfbb6b48cf4bf9445c6f
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "8Gi"
              cpu: "250m"
            limits:
              memory: "8Gi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /fits/version
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
