ci/k8s/hls.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-hls
spec:
  selector:
    app: islandora-hls
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-hls
spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-hls
  template:
    metadata:
      labels:
        app: islandora-hls
    spec:
      containers:
        - name: scyllaridae-hls
          image: ghcr.io/lehigh-university-libraries/scyllaridae-hls:main@sha256:d583d70eb484f2cb3a7593f0337b720c3275e67b452d89de18b038de3d827968
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "4Gi"
              cpu: "250m"
            limits:
              memory: "4Gi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
