ci/k8s/homarus.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-ffmpeg
spec:
  selector:
    app: islandora-ffmpeg
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-ffmpeg
spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-ffmpeg
  template:
    metadata:
      labels:
        app: islandora-ffmpeg
    spec:
      containers:
        - name: scyllaridae-ffmpeg
          image: islandora/homarus:7.0.18@sha256:d2f9744997c31f2a01e408fa709dcb198a8f3286aac94eb50a183166cfa8cf1b
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "16Gi"
              cpu: "500m"
            limits:
              memory: "16Gi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
