ci/k8s/houdini.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-imagemagick
spec:
  selector:
    app: islandora-imagemagick
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-imagemagick
spec:
  replicas: 12
  selector:
    matchLabels:
      app: islandora-imagemagick
  template:
    metadata:
      labels:
        app: islandora-imagemagick
    spec:
      containers:
        - name: scyllaridae-imagemagick
          image: islandora/houdini:houdini-vips@sha256:ff8acfce569c865d248d7c3c0b401aa87314c1ad2d55c9311c8f9d8be9d384ec
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "8Gi"
              cpu: "100m"
            limits:
              memory: "8Gi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
