ci/k8s/htr.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-openai-htr
spec:
  selector:
    app: islandora-openai-htr
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-openai-htr
spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-openai-htr
  template:
    metadata:
      labels:
        app: islandora-openai-htr
    spec:
      containers:
        - name: scyllaridae-htr
          image: ghcr.io/lehigh-university-libraries/scyllaridae-openai-htr:main@sha256:3f9076aff7239ad99c1d9ab2d9f25377d4be5e15517d3ac1c4d527ae5e2861e0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "2Gi"
              cpu: "250m"
            limits:
              memory: "2Gi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
