ci/k8s/hypercube.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-tesseract
spec:
  selector:
    app: islandora-tesseract
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-tesseract

spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-tesseract
  template:
    metadata:
      labels:
        app: islandora-tesseract
    spec:
      containers:
        - name: scyllaridae-tesseract
          image: islandora/hypercube:7.0.18@sha256:98f74e488c3fadc1aa3df5533c8af09a9d2b8c69ac4fda9d5105b09fec7c9f74
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "4Gi"
              cpu: "250m"
            limits:
              memory: "4Gi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
