ci/k8s/mergepdf.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-mergepdf
spec:
  selector:
    app: islandora-mergepdf
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-mergepdf
spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-mergepdf
  template:
    metadata:
      labels:
        app: islandora-mergepdf
    spec:
      containers:
        - name: scyllaridae-mergepdf
          image: islandora/mergepdf:7.0.18@sha256:931bc96cd574ddb69bc47fab04389cad418df2010b71f688d4009cca6ec8e7c9
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "24Gi"
              cpu: "500m"
            limits:
              memory: "24Gi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
