ci/k8s/ocrpdf.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-ocrpdf
spec:
  selector:
    app: islandora-ocrpdf
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-ocrpdf
spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-ocrpdf
  template:
    metadata:
      labels:
        app: islandora-ocrpdf
    spec:
      containers:
        - name: scyllaridae-ocrpdf
          image: ghcr.io/lehigh-university-libraries/scyllaridae-ocrpdf:main@sha256:1e3b8cd7770a74cbc06f6741ad49d94891d7b712c6483cb40457092965109252
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
