ci/k8s/transformer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sentence-transformer
spec:
  selector:
    app: sentence-transformer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentence-transformer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sentence-transformer
  template:
    metadata:
      labels:
        app: sentence-transformer
    spec:
      containers:
        - name: sentence-transformer
          image: ghcr.io/lehigh-university-libraries/sentence-transformer-service:renovate.bump-dependencies
          imagePullPolicy: Always
          resources:
            requests:
              memory: "2Gi"
              cpu: "1000m"
            limits:
              nvidia.com/gpu: 1
              memory: "2Gi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 30
