ci/k8s/warc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-tn-warc
spec:
  selector:
    app: islandora-tn-warc
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-tn-warc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-tn-warc
  template:
    metadata:
      labels:
        app: islandora-tn-warc
    spec:
      containers:
        - name: scyllaridae-tn-warc
          image: ghcr.io/lehigh-university-libraries/scyllaridae-tn-warc:main@sha256:13f65a0153ecbe2569c37cac86288b5001f80db3b3124b0d9d2610bca99464fc
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
