ci/k8s/whisper.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-whisper
spec:
  selector:
    app: islandora-whisper
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-whisper
spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-whisper
  template:
    metadata:
      labels:
        app: islandora-whisper
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: islandora-whisper
              topologyKey: kubernetes.io/hostname
      volumes:
        - name: islandora-prod-ca
          configMap:
            name: islandora-prod-ca
            items:
              - key: islandora-prod.pem
                path: ca.pem
      containers:
        - name: scyllaridae-whisper
          image: ghcr.io/lehigh-university-libraries/scyllaridae-whisper:main@sha256:ecd77b58f86b37e4937bd74cb72962fa99ad1ee02e5a9877a0019a98d7fc188b
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "32Gi"
              cpu: "500m"
            limits:
              memory: "32Gi"
              cpu: "28"
              nvidia.com/gpu: 4
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: islandora-prod-ca
              mountPath: /app/ca.pem
              subPath: ca.pem
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
