ci/k8s/zip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: islandora-tn-zip
spec:
  selector:
    app: islandora-tn-zip
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: islandora-tn-zip
spec:
  replicas: 3
  selector:
    matchLabels:
      app: islandora-tn-zip
  template:
    metadata:
      labels:
        app: islandora-tn-zip
    spec:
      containers:
        - name: scyllaridae-tn-zip
          image: ghcr.io/lehigh-university-libraries/scyllaridae-tn-zip:main@sha256:cfae99d9a5b58ea247e4633d72b13c355f0d6daafd8fa8a7543a5c30f2659acc
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
